# better_spotify

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  package-lock.json  package.json  tailwind.config.js
assets/: tailwind.css
migrations/: 20240101000001_initial.sql
src/: api.rs  api_models.rs  db.rs  db_operations.rs  main.rs  middleware.rs  server.rs
src/auth/: mod.rs
src/components/: layout.rs  mod.rs  spotify.rs
src/routes/: mod.rs  pages.rs  shuffle.rs
