[package]
name = "betterd_spotify"
version = "0.1.0"
authors = ["hammamiomar <hhammamiomar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.2", features = ["fullstack","router"] }
axum = { version = "0.7.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
dioxus-cli-config = { version = "*", optional = true }
dotenvy = {version = "0.15.7", optional = true}
reqwest = { version = "0.12.15", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
rand = { version = "0.8.0", optional = true }
sha2 = {version = "0.10.9", optional = true}
base64 = {version = "0.22.1", optional = true}
anyhow = "1.0.98"
tracing = { version = "0.1", optional = true} 
tracing-subscriber= { version = "0.3", features = ["env-filter"], optional = true } 
lazy_static = "1.5.0"
dioxus-logger = "0.6.2"
log = "0.4.27"
wasm-logger = "0.2.0"
neo4rs = {version = "0.8.0", optional = true}
axum-extra = { version = "0.9", features = ["cookie"], optional=true}
uuid = { version = "1.17.0", features = ["v4"], optional = true}
chrono = {version = "0.4.41", optional = true}
cookie = "0.18.1"

[features]
server = ["dioxus/server",
    "dep:axum", 
    "dep:tokio",
    "dep:serde_json",
    "dep:dotenvy",
    "dep:rand",
    "dep:base64",
    "dep:sha2",
    "dep:tracing",
    "dep:tracing-subscriber", 
    "dioxus-cli-config",
    "dep:rand",
    "dep:neo4rs",
    "dep:axum-extra",
    "dep:uuid",
    "dep:chrono"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
